<resources>
    <string name="app_name">Go No-Go</string>

    <string name="standard_button_string">Standard</string>
    <string name="endless_button_string">Endless</string>
    <string name="stats_button_string">Statistics</string>
    <string name="title_string">Go-No Go</string>
    <string name="help_button_string">Help</string>

    <string name="Help_title">What is Go-No Go?</string>
    <string name="Help_explain">Go-No Go is a task that tests the inhibitory control of the user. In each trial the user will be subjected to stimuli that indicates a Go or a No Go in order to gauge their motor activity.\n\nUsers will be shown a green area indicating a Go, where the user should tap the area, then in another instance they may be shown a red area indicating a No-Go, where the user should not tap the area.\n\nThere are two different Go-No Go modes, being standard and endless. In standard mode the user will be prompted for a set amount of Gos and No Gos and in the endless mode the user will be prompted until they make a mistake. At the end of each trial users will be able to see their data for a given session or their lifetime statistics.</string>

    <string name="back_button_string">Back</string>
    <string name="task_title">List of Tasks</string>
    <string name="task_graph_title">Average Response Time vs. Percent Correct</string>
    <string name="task_num">Task Number </string>
    <string name="task_date">Date: </string>

    <string name="trial_average">Average Response\ntime (Go trials)</string>
    <string name="trial_graph_title">Trial Number vs. Response Time</string>
    <string name="trial_type">Type</string>
    <string name="trial_response">Response</string>
    <string name="trial_response_time">Response Time</string>

    <string name="tasks_title">List of Tasks</string>
</resources>