<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="690dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Back" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backBtn"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/averageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleView"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trial_average" />

    <TextView
        android:id="@+id/averageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleView"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/percentView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/averageLabel"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/percentView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/percentView1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/percentView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/percentView2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/percentView3"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/trial_graph_title"
        android:textSize="24sp" >

    </TextView>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:layout_below="@+id/footerView" />

    <TextView
        android:id="@+id/typeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/graph"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trial_type" />

    <TextView
        android:id="@+id/responseView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/graph"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trial_response" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/graph"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trial_response_time" />

</RelativeLayout>